Fixes of misaligned contents in the info and music tabs of the user accound page.

--- a/hypster/Areas/apps/css/appPlayerNews.css
+++ b/hypster/Areas/apps/css/appPlayerNews.css
@@ -64,7 +64,7 @@ element > * {
 
 .MainNHypPlayer .MainPlayerHoder
 {
-	float:left; width:98%; margin:1%; height:241px; background-color:#000000; border-radius:3px;
+	float:left; width:98%; margin:1%; height:229px; background-color:#000000; border-radius:3px;
 }
 
 .MainNHypPlayer .MainAdsHoder
@@ -90,12 +90,12 @@ element > * {
 
 .MainNHypPlayer .MainPlaylistHolder
 {
-	float:left; width:98%; height:368px; background-color:#000000; border-radius:3px; margin-left:1%;
+	float:left; width:98%; height:315px; background-color:#000000; border-radius:3px; margin-left:1%;
 }
 
 .MainNHypPlayer #PlayerPlaylistHolder1
 {
-	float:left; width:100%; height:365px; overflow:auto; margin-top:2px;
+	float:left; width:100%; height:313px; overflow:auto; margin-top:2px;
 }
 
 .MainNHypPlayer #dr_PlaylistList
@@ -142,7 +142,7 @@ element > * {
 
 .MainNHypPlayer #player
 {
-	float:left; width:100%; height:180px;
+	float:left; width:100% !important; height:180px !important;
 }
 
 .MainNHypPlayer .ControlBar
@@ -151,29 +151,6 @@ element > * {
 	overflow:hidden;
 }
 
-
-
-/*
-.MainNHypPlayer #Prev_btn
-{
-	float:left; width:38px; height:38px; line-height:35px; margin:2px 8px 2px 2px; background:#242424 url('/imgs/player/prev_icn.jpg') no-repeat center; border-radius:3px; text-align:center; font-size:16px; color:#FFFFFF; cursor:pointer; font-weight:bold;
-}
-
-.MainNHypPlayer #PlPs_btn
-{
-	float:left; width:38px; height:38px; line-height:32px; margin:2px 8px 2px 2px; background:#242424 url('/imgs/player/play_icn.jpg') no-repeat center; border-radius:3px; text-align:center; font-size:16px; color:#FFFFFF; cursor:pointer; font-weight:bold;
-}
-
-.MainNHypPlayer #Next_btn
-{
-	float:left; width:39px; height:38px; line-height:32px; margin:2px 8px 2px 2px; background:#242424 url('/imgs/player/next_icn.jpg') no-repeat center; border-radius:3px; text-align:center; font-size:16px; color:#FFFFFF; cursor:pointer; font-weight:bold;
-}
-
-.MainNHypPlayer #Shuffle_btn
-{
-	float:left; width:39px; height:38px; line-height:32px; margin:2px 8px 2px 2px; background:#242424 url('/imgs/player/shuffle_icn.jpg') no-repeat center; border-radius:3px; text-align:center; font-size:16px; color:#FFFFFF; cursor:pointer; font-weight:bold;
-}
-*/
 
 .MainNHypPlayer #Prev_btn
 {
@@ -194,34 +171,6 @@ element > * {
 {
 	float:left; width:33px; height:32px; line-height:32px; margin:2px; background:#000000 url('/imgs/player_senses/shuffle_icn.jpg') no-repeat center; border:2px solid #3fbc91; border-radius:17px; text-align:center; font-size:16px; color:#FFFFFF; cursor:pointer; font-weight:bold;
 }
-
-
-
-
-
-
-
-/*
-.MainNHypPlayer #Mute_btn_cont
-{
-    float:left; width:39px; height:38px; line-height:32px; margin:2px 8px 2px 2px; background:#242424; border-radius:3px; text-align:center; font-size:16px; color:#FFFFFF; cursor:pointer; font-weight:bold;
-}
-
-.MainNHypPlayer #Mute_btn
-{
-	float:left; width:39px; height:38px; line-height:32px; background:#242424 url('/imgs/player/mute_icn.jpg') no-repeat center; border-radius:3px; text-align:center; font-size:16px; color:#FFFFFF; cursor:pointer; font-weight:bold;
-}
-
-.MainNHypPlayer #VolumeControl
-{
-    float:left; width:43px; height:5px; margin-top:14px; background-color:#656565; cursor:pointer;
-}
-
-.MainNHypPlayer #VolumeControlVal
-{
-    float:left; width:85%; height:5px; background-color:#f9a317;
-}
-*/
 
 .MainNHypPlayer #Mute_btn_cont
 {
@@ -244,23 +193,6 @@ element > * {
 }
 
 
-
-
-
-
-/*
-.MainNHypPlayer #AddNSongBtn
-{
-	float:right; width:41px; height:38px; line-height:34px; margin:0px; background: url('/imgs/player/add_to_playlist_icn.jpg') no-repeat center; border-radius:0px; text-align:center; font-size:16px; color:#FFFFFF; cursor:pointer; font-weight:bold;
-}
-
-.MainNHypPlayer #LikePlaylist
-{
-	float:left; height:38px; line-height:38px; margin:2px 8px 2px 2px; background:#242424; border-radius:3px; text-align:center; font-size:16px; color:#FFFFFF; cursor:pointer; font-weight:bold; 
-}
-*/
-
-
 .MainNHypPlayer #AddNSongBtn
 {
 	float:right; width:35px; height:32px; line-height:34px; margin:0px; background:#000000 url('/imgs/player_senses/add_to_playlist_icn.jpg') no-repeat center; border-radius:0px; text-align:center; font-size:16px; color:#FFFFFF; cursor:pointer; font-weight:bold;
@@ -277,15 +209,6 @@ element > * {
     float:left; width:36px; height:36px; line-height:36px; margin:2px; background:#000000 url('/imgs/player_senses/like_playlist_icn.jpg') no-repeat center; border:2px solid #3fbc91; border-radius:17px; text-align:center; font-size:16px; color:#FFFFFF; cursor:pointer; font-weight:bold;
     margin:0px;
 }
-
-
-
-
-
-
-
-
-
 
 
 
@@ -427,8 +350,6 @@ element > * {
 {
     float:left; min-width:10px; margin:5px 4px 0 2px; font-size:14px; color:#80ba17; cursor:pointer; text-align:left; font-weight:bold;
 }
-
-
 
 
 
