--- a/hypster/Areas/apps/css/appSite0.css
+++ b/hypster/Areas/apps/css/appSite0.css
@@ -5066,7 +5066,7 @@ iframe[src^="https://www.youtube.com/"]
 
 iframe[src^="http://hypster.com/hypsterPlayer/MPL_News"]
 {
-    width:352px !important; height:618px !important;
+    width:352px !important; /*height:618px !important;*/
 }
 
 iframe[src^="https://www.facebook.com/"]
