--- a/hypster/Areas/apps/css/appSite2.css
+++ b/hypster/Areas/apps/css/appSite2.css
@@ -5054,7 +5054,7 @@ iframe[src^="https://www.youtube.com/"]
 
 iframe[src^="http://hypster.com/hypsterPlayer/MPL_News"]
 {
-    width:352px !important; height:618px !important;
+    width:352px !important; /*height:618px !important;*/
 }
 
 /* Styles for basic forms */
